--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,22 @@
 	
 	</dependencies>
 
-	
+	<build>
+<pluginManagement>
+<plugins>
+
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.2</version>
+        <configuration>
+            <suiteXmlFiles>
+                <suiteXmlFile>testng_login.xml</suiteXmlFile>
+            </suiteXmlFiles>
+        </configuration>
+    </plugin>
+
+</plugins>
+</pluginManagement>
+</build>
 </project>
