--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
             <version>3.2.2</version>
             <configuration>
                 <suiteXmlFiles>
-                    <suiteXmlFile>testng_login.xml</suiteXmlFile>
+                    <suiteXmlFile>testngtest1.xml</suiteXmlFile>
                 </suiteXmlFiles>
             </configuration>
         </plugin>
