--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,13 @@
     <artifactId>javafaker</artifactId>
     <version>1.0.2</version>
 </dependency>
-	
+	<!-- https://mvnrepository.com/artifact/org.apache.maven/maven-plugin-api -->
+<dependency>
+    <groupId>org.apache.maven</groupId>
+    <artifactId>maven-plugin-api</artifactId>
+    <version>4.0.0-alpha-10</version>
+</dependency>
+
 	
 	</dependencies>
 
