--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
     <artifactId>maven-plugin-api</artifactId>
     <version>4.0.0-alpha-10</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.12.1</version>
+</dependency>
 
 	
 	</dependencies>
